# pulse-news

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pulse-news-product-audit-implementation-plan.md  pulse-news-remediation-review.md
.github/: AGENTS.md
.github/workflows/: AGENTS.md  ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
alembic/: AGENTS.md  env.py
backend/: AGENTS.md  pyproject.toml
backend/app/: AGENTS.md  __init__.py  ai_generation.py  auth.py  config.py  crypto.py  database.py  deps.py  email_delivery.py  email_templates.py  idempotency.py  main.py  models.py  profile_service.py  scheduler.py  schemas.py  security.py
backend/app/api/: AGENTS.md  __init__.py  api_keys.py  audit.py  auth.py  email_templates.py  newsletters.py  oauth_openai.py  providers.py  public.py  router.py  runs.py  webhooks.py
backend/app/generation/: fetch_url.py  openai_chatgpt.py  parser.py  tool_loop.py  tool_registry.py  usage.py  web_search.py
backend/app/oauth/: __init__.py  openai_chatgpt.py
backend/app/source_pipeline/: service.py
backend/scripts/: reset_password.py
backend/tests/: AGENTS.md  test_ai_generation.py  test_ai_generation_openai_web_search.py  test_audit_phase0.py  test_auth.py  test_database_migrations.py  test_email_delivery.py  test_email_templates.py  test_generation_openai_chatgpt.py  test_newsletters.py  test_oauth_openai_helpers.py  test_oauth_openai_routes.py  test_profile_service.py  test_runs.py  test_scheduler.py  test_webhooks.py
docs/: AGENTS.md
frontend/: AGENTS.md  index.html  package-lock.json  package.json  playwright.config.ts
frontend/src/: AGENTS.md  (+2 more)
(+99 files in other folders)
